--- a/alumni.html
+++ b/alumni.html
@@ -1,246 +1,480 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Alumni Page</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(to right, #fbeaff, #f8efff);
-      color: #333;
-      overflow-x: hidden;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ReUnite | Alumni</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@300;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
+    <style>
+      #particles-container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+      }
+    </style>
 
-    .container {
-      max-width: 1200px;
-      margin: auto;
-      padding: 30px 20px;
-    }
+    <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-auth-compat.js"></script>
 
-    .search-bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: 12px;
-      margin-bottom: 30px;
-      background: rgba(255, 255, 255, 0.5);
-      backdrop-filter: blur(12px);
-      padding: 12px 20px;
-      border-radius: 15px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
-    }
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: "Poppins", sans-serif;
+      }
 
-    .search-bar input,
-    .search-bar select,
-    .search-bar button {
-      font-size: 16px;
-      padding: 12px 14px;
-      border-radius: 10px;
-      border: none;
-      outline: none;
-    }
+      body {
+        padding: 2rem;
+        transition: background 0.3s, color 0.3s;
+      }
 
-    .search-bar input {
-      flex-grow: 1;
-      background: #fff;
-      border: 1px solid #ddd;
-    }
+      .dark {
+        background: #111827;
+        color: #f3f4f6;
+      }
 
-    .search-bar select {
-      background-color: #fff;
-      border: 1px solid #ddd;
-    }
+      .light {
+        background: #f0f4ff;
+        color: #333;
+      }
 
-    .search-bar button {
-      background: linear-gradient(to right, #ff91a4, #ffc3c3);
-      color: white;
-      font-weight: 500;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
+      .top-bar {
+        max-width: 1200px;
+        margin: 0 auto 1rem auto;
+      }
 
-    .search-bar button:hover {
-      background: linear-gradient(to right, #ff6785, #ffbaba);
-    }
+      .home-link {
+        display: inline-block;
+        padding: 0.5rem 1.2rem;
+        border-radius: 999px;
+        font-weight: 600;
+        text-decoration: none;
+        font-size: 0.95rem;
+        background-color: #4f46e5;
+        color: white;
+        transition: background 0.3s ease;
+      }
 
-    .nav-card-wrapper {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(380px, 1fr));
-      gap: 25px;
-    }
+      .home-link:hover {
+        background-color: #4338ca;
+      }
 
-    .card {
-  background: rgba(255, 255, 255, 0.7);
-  backdrop-filter: blur(15px);
-  border-radius: 20px;
-  padding: 35px;
-  display: flex;
-  align-items: center;
-  gap: 30px;
-  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.08);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  min-height: 180px;
-}
+      .page-wrapper {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 2rem;
+        border-radius: 20px;
+        box-shadow: 0 6px 30px rgba(79, 70, 229, 0.05);
+        transition: background 0.3s, color 0.3s;
+      }
 
-.card:hover {
-  transform: translateY(-6px);
-  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.1);
-}
+      .light .page-wrapper {
+        background: #ffffff;
+      }
 
-.card img {
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
-  object-fit: cover;
-  border: 3px solid #ffbdd6;
-  background-color: #fff;
-}
+      .dark .page-wrapper {
+        background: #1f2937;
+      }
 
-.nav-card-wrapper {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(460px, 1fr));
-  gap: 30px;
-}
+      .title {
+        text-align: center;
+        font-family: "Pacifico", cursive;
+        font-size: 3.2rem;
+        margin-top: 0.5rem;
+        margin-bottom: 1.5rem;
+        letter-spacing: 1px;
+      }
 
+      .light .title {
+        color: #4f46e5;
+      }
 
-    .card-details {
-      flex: 1;
-    }
+      .dark .title {
+        color: #a5b4fc;
+      }
 
-    .card-details strong {
-      font-size: 20px;
-      color: #ff5d8f;
-    }
+      .light .search-bar {
+        background: rgba(255, 255, 255, 0.6);
+      }
 
-    .card a {
-      color: #ff7ea8;
-      font-weight: 500;
-      text-decoration: none;
-    }
+      .search-bar {
+        display: grid;
+        grid-template-columns: 1fr auto auto;
+        gap: 12px;
+        margin-bottom: 30px;
+        background: rgba(255, 255, 255, 0.6);
+        backdrop-filter: blur(12px);
+        padding: 12px 20px;
+        border-radius: 15px;
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
+        width: 100%;
+      }
 
-    .no-results {
-      text-align: center;
-      font-size: 18px;
-      margin-top: 20px;
-      color: #ffb0c9;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <div class="search-bar">
-      <input type="text" id="searchInput" placeholder="Search alumni...">
-      <select id="searchCategory">
-        <option value="fullName">Name</option>
-        <option value="batch">Batch</option>
-        <option value="company">Company</option>
-      </select>
-      <button onclick="applySearch()">Search</button>
+      .dark .search-bar {
+        background: rgba(31, 41, 55, 0.6);
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+      }
+
+      .search-bar input {
+        width: 100%;
+        background: #fff;
+        border: 1px solid #ddd;
+        padding: 12px 14px;
+        border-radius: 10px;
+      }
+
+      .dark .search-bar input {
+        background: #1f2937;
+        color: #fff;
+        border: 1px solid #4b5563;
+      }
+
+      .search-bar select {
+        background-color: #fff;
+        border: 1px solid #ddd;
+        padding: 12px 14px;
+        border-radius: 10px;
+      }
+
+      .dark .search-bar select {
+        background-color: #1f2937;
+        color: #fff;
+        border: 1px solid #4b5563;
+      }
+
+      .search-bar button {
+        white-space: nowrap;
+        padding: 12px 16px;
+        background: linear-gradient(to right, #6366f1, #818cf8);
+        color: white;
+        border-radius: 10px;
+        border: none;
+        font-weight: 500;
+        cursor: pointer;
+        transition: background 0.3s ease;
+      }
+
+      .search-bar button:hover {
+        background: linear-gradient(to right, #4f46e5, #6366f1);
+      }
+
+      .search-bar input,
+      .search-bar select,
+      .search-bar button {
+        font-size: 16px;
+        padding: 12px 14px;
+        border-radius: 10px;
+        border: none;
+        outline: none;
+      }
+
+      .light .search-bar input,
+      .light .search-bar select {
+        background: #fff;
+        color: #111;
+        border: 1px solid #ddd;
+      }
+
+      .dark .search-bar input,
+      .dark .search-bar select {
+        background: #111827;
+        color: #f3f4f6;
+        border: 1px solid #374151;
+      }
+
+      .search-bar button {
+        background: linear-gradient(to right, #6366f1, #818cf8);
+        color: white;
+        font-weight: 500;
+        cursor: pointer;
+        transition: background 0.3s ease;
+      }
+
+      .search-bar button:hover {
+        background: linear-gradient(to right, #4f46e5, #6366f1);
+      }
+
+      .nav-card-wrapper {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(460px, 1fr));
+        gap: 30px;
+      }
+
+      .card {
+        border-radius: 20px;
+        padding: 35px;
+        display: flex;
+        align-items: center;
+        gap: 30px;
+        box-shadow: 0 6px 16px rgba(0, 0, 0, 0.08);
+        transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s;
+        cursor: pointer;
+      }
+
+      .light .card {
+        background: rgba(255, 255, 255, 0.7);
+      }
+
+      .dark .card {
+        background: rgba(31, 41, 55, 0.8);
+      }
+
+      .card:hover {
+        transform: translateY(-6px);
+        box-shadow: 0 12px 24px rgba(0, 0, 0, 0.1);
+      }
+
+      .card img {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        object-fit: cover;
+        border: 3px solid #c7d2fe;
+        background-color: #fff;
+      }
+
+      .card-details {
+        flex: 1;
+      }
+
+      .card-details strong {
+        font-size: 20px;
+      }
+
+      .light .card-details strong {
+        color: #4f46e5;
+      }
+
+      .dark .card-details strong {
+        color: #a5b4fc;
+      }
+
+      .card a {
+        color: #6366f1;
+        font-weight: 500;
+        text-decoration: none;
+      }
+
+      .no-results {
+        text-align: center;
+        font-size: 18px;
+        margin-top: 20px;
+        color: #888;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div id="particles-container"></div>
+
+    <div class="top-bar">
+      <a href="dashboard.html" class="home-link">← Home</a>
     </div>
 
-    <div id="alumniCards" class="nav-card-wrapper"></div>
-  </div>
+    <div class="page-wrapper">
+      <div class="title">ReUnite</div>
 
-  <script>
-    const alumni = [
-      {
-        fullName: "Aarushi Sharma",
-        batch: "2018",
-        company: "Google",
-        linkedin: "https://linkedin.com/in/aarushi"
-      },
-      {
-        fullName: "Meera Kapoor",
-        batch: "2019",
-        company: "Microsoft",
-        linkedin: "https://linkedin.com/in/meera"
-      },
-      {
-        fullName: "Diya Bansal",
-        batch: "2020",
-        company: "Amazon",
-        linkedin: "https://linkedin.com/in/diya"
-      },
-      {
-        fullName: "Nisha Verma",
-        batch: "2021",
-        company: "Meta",
-        linkedin: "https://linkedin.com/in/nisha"
-      },
-      {
-        fullName: "Riya Mehta",
-        batch: "2022",
-        company: "Adobe",
-        linkedin: "https://linkedin.com/in/riya"
-      },
-      {
-        fullName: "Ritika Desai",
-        batch: "2024",
-        company: "Adobe",
-        linkedin: "https://linkedin.com/in/ritikadesai"
-      }
-    ];
+      <div class="search-bar">
+        <input type="text" id="searchInput" placeholder="Search alumni..." />
+        <select id="searchCategory">
+          <option value="name">Name</option>
+        </select>
+        <button onclick="applySearch()">Search</button>
+      </div>
 
-    function renderAlumni(filterKey = '', filterValue = '') {
-  const cardsContainer = document.getElementById('alumniCards');
-  cardsContainer.innerHTML = '';
-  let found = false;
+      <div id="alumniCards" class="nav-card-wrapper"></div>
+    </div>
+    <script src="./firebase-config.js"></script>
+    <script>
+      // Firebase config
+      const db = firebase.firestore();
+      const auth = firebase.auth();
 
-  alumni.forEach((a) => {
-    if (!filterKey || a[filterKey].toLowerCase().includes(filterValue.toLowerCase())) {
-      found = true;
-      const imageSrc = `https://ui-avatars.com/api/?name=${encodeURIComponent(a.fullName)}&background=random`;
+      let alumniData = [];
+      let currentUserUid = "";
 
-      const card = document.createElement('div');
-      card.className = 'card';
+      function renderAlumni(filterKey = "", filterValue = "") {
+        const cardsContainer = document.getElementById("alumniCards");
+        cardsContainer.innerHTML = "";
+        let found = false;
 
-      // Check if profile page exists
-      let profilePage = null;
-      if (a.fullName === "Aarushi Sharma") profilePage = "profiles/arushi.html";
-      if (a.fullName === "Meera Kapoor") profilePage = "profiles/meera.html";
+        alumniData.forEach((a) => {
+          if (a.id === currentUserUid) return;
 
-      // If there's a profile, make card clickable except for 'Chat Now'
-      if (profilePage) {
-        card.style.cursor = 'pointer';
-        card.addEventListener('click', (e) => {
-          if (!e.target.closest('.chat-link')) {
-            window.location.href = profilePage;
+          if (
+            !filterKey ||
+            a[filterKey]?.toLowerCase().includes(filterValue.toLowerCase())
+          ) {
+            found = true;
+            const imageSrc = `https://ui-avatars.com/api/?name=${encodeURIComponent(
+              a.name
+            )}&background=EEF2FF&color=4F46E5&bold=true`;
+
+            const card = document.createElement("div");
+            card.className = "card";
+
+            card.innerHTML = `
+              <div style="display: flex; align-items: center; gap: 30px;">
+                <img src="${imageSrc}" alt="Avatar">
+                <div class="card-details">
+                  <strong>${a.name}</strong><br>
+                  <span>Batch: ${
+                    a.academics?.year || a.batch || "N/A"
+                  }</span><br>
+                  <a href="dm.html?uid=${
+                    a.id
+                  }" onclick="event.stopPropagation()">Chat Now</a>
+                </div>
+              </div>`;
+
+            card.addEventListener("click", () => {
+              window.location.href = `profile.html?uid=${a.id}`;
+            });
+
+            cardsContainer.appendChild(card);
           }
+        });
+
+        if (!found) {
+          cardsContainer.innerHTML =
+            '<p class="no-results">No alumni found matching your search.</p>';
+        }
+      }
+
+      function applySearch() {
+        const key = document.getElementById("searchCategory").value;
+        const value = document.getElementById("searchInput").value;
+        renderAlumni(key, value);
+      }
+
+      auth.onAuthStateChanged((user) => {
+        if (user) {
+          currentUserUid = user.uid;
+          db.collection("users")
+            .where("userType", "==", "alumni")
+            .get()
+            .then(async (snapshot) => {
+              const users = [];
+
+              for (const doc of snapshot.docs) {
+                const userData = { id: doc.id, ...doc.data(), batch: "N/A" };
+
+                try {
+                  const academicSnap = await db
+                    .collection("users")
+                    .doc(doc.id)
+                    .collection("academics")
+                    .limit(1)
+                    .get();
+
+                  if (!academicSnap.empty) {
+                    const academicData = academicSnap.docs[0].data();
+                    if (academicData.year) {
+                      userData.batch = academicData.year;
+                      userData.academics = academicData;
+                    }
+                  }
+                } catch (err) {
+                  console.error("Error fetching academic data:", err);
+                }
+
+                users.push(userData);
+              }
+
+              alumniData = users;
+              renderAlumni();
+            })
+            .catch((err) => {
+              console.error("Error fetching alumni:", err);
+            });
+        } else {
+          window.location.href = "login.html";
+        }
+      });
+
+      // Theme Logic
+      document.addEventListener("DOMContentLoaded", () => {
+        const theme = localStorage.getItem("theme") || "light";
+        document.body.classList.add(theme);
+      });
+      // Load the correct particle config based on the theme
+      // Connected particles with "grab" interaction (lines attach to cursor)
+      function loadConnectedParticles(theme) {
+        tsParticles.load("particles-container", {
+          fullScreen: { enable: false },
+          background: {
+            color: { value: theme === "dark" ? "#111827" : "#f0f4ff" },
+          },
+          particles: {
+            number: {
+              value: 70,
+              density: {
+                enable: true,
+                area: 800,
+              },
+            },
+            color: {
+              value: theme === "dark" ? "#a5b4fc" : "#4f46e5",
+            },
+            shape: {
+              type: "circle",
+            },
+            opacity: {
+              value: 0.5,
+            },
+            size: {
+              value: { min: 1, max: 3 },
+            },
+            links: {
+              enable: true,
+              distance: 150,
+              color: theme === "dark" ? "#a5b4fc" : "#4f46e5",
+              opacity: 0.4,
+              width: 1,
+            },
+            move: {
+              enable: true,
+              speed: 1,
+              direction: "none",
+              outModes: { default: "bounce" },
+            },
+          },
+          interactivity: {
+            events: {
+              onHover: {
+                enable: true,
+                mode: "grab",
+              },
+              resize: true,
+            },
+            modes: {
+              grab: {
+                distance: 140,
+                links: {
+                  opacity: 0.7,
+                },
+              },
+            },
+          },
+          detectRetina: true,
         });
       }
 
-      card.innerHTML = `
-        <div style="display: flex; align-items: center; gap: 30px;">
-          <img src="${imageSrc}" alt="Avatar">
-          <div class="card-details">
-            <strong>${a.fullName}</strong><br>
-            Batch: ${a.batch}<br>
-            Company: ${a.company}<br>
-            <a href="dm.html?name=${encodeURIComponent(a.fullName)}" class="chat-link" style="color: #ff7ea8; font-weight: 500; text-decoration: none;">Chat Now</a>
-          </div>
-        </div>
-      `;
-      cardsContainer.appendChild(card);
-    }
-  });
-
-  if (!found) {
-    cardsContainer.innerHTML = '<p class="no-results">No alumni found matching your search.</p>';
-  }
-}
-
-    function applySearch() {
-      const key = document.getElementById('searchCategory').value;
-      const value = document.getElementById('searchInput').value;
-      renderAlumni(key, value);
-    }
-
-    renderAlumni();
-  </script>
-</body>
+      // Load theme + particles on page load
+      document.addEventListener("DOMContentLoaded", () => {
+        const theme = localStorage.getItem("theme") || "light";
+        document.body.classList.add(theme);
+        loadConnectedParticles(theme);
+      });
+    </script>
+  </body>
 </html>
-
