--- a/chat.html
+++ b/chat.html
@@ -1,228 +1,438 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>SheCircle | Inbox</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      font-family: 'Segoe UI', sans-serif;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <title>Inbox | SheCircle</title>
 
-    body {
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(
-    to bottom right,
-    rgba(255, 220, 240, 0.6),
-    rgba(220, 235, 255, 0.6)
-  );
-      color: #333;
-    }
+    <!-- Fonts & Particles -->
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
 
-    .overlay {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      background-color: #fafafa;
-      padding: 2rem;
-    }
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore-compat.js"></script>
 
-    .inbox-container {
-      background-color: #ffffff;
-      padding: 2.5rem;
-      border-radius: 20px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
-      width: 100%;
-      max-width: 600px;
-    }
+    <style>
+      * {
+        box-sizing: border-box;
+        font-family: "Poppins", sans-serif;
+        margin: 0;
+        padding: 0;
+      }
 
-    h1 {
-      text-align: center;
-      color: #cc3366;
-      margin-bottom: 1.5rem;
-    }
+      body {
+        padding: 2rem;
+        transition: background 0.3s, color 0.3s;
+      }
 
-    .search-bar {
-      margin-bottom: 1.5rem;
-    }
+      #particles-container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+      }
 
-    .search-bar input {
-      width: 100%;
-      padding: 0.7rem 1rem;
-      border: 1.8px solid #f4c2c2;
-      border-radius: 25px;
-      font-size: 1rem;
-      transition: 0.3s ease;
-    }
+      .light {
+        background: linear-gradient(to bottom right, #fceaff, #eaf0ff);
+        color: #333;
+      }
 
-    .search-bar input:focus {
-      border-color: #cc3366;
-      outline: none;
-      box-shadow: 0 0 5px rgba(204, 51, 102, 0.2);
-    }
+      .dark {
+        background: linear-gradient(to bottom right, #1f2937, #111827);
+        color: #f3f4f6;
+      }
 
-    .alumni {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem 0;
-      border-bottom: 1px solid #f2f2f2;
-    }
+      .page-wrapper {
+        max-width: 640px;
+        margin: 0 auto;
+      }
 
-    .alumni:last-child {
-      border-bottom: none;
-    }
+      .home-link {
+        display: inline-block;
+        margin-bottom: 1rem;
+        padding: 0.5rem 1.2rem;
+        border-radius: 999px;
+        font-weight: 600;
+        text-decoration: none;
+        font-size: 0.95rem;
+        background-color: #4f46e5;
+        color: white;
+        transition: background 0.3s ease, transform 0.2s ease;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      }
 
-    .profile {
-      display: flex;
-      align-items: center;
-    }
+      .home-link:hover {
+        background-color: #4338ca;
+        transform: translateY(-1px);
+      }
 
-    .profile img {
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-right: 1rem;
-      border: 2px solid #f4c2c2;
-    }
+      .container {
+        padding: 2rem;
+        border-radius: 20px;
+        animation: fadeIn 0.5s ease;
+      }
 
-    .alumni-name {
-      font-size: 1rem;
-      font-weight: 600;
-      color: #444;
-    }
+      .light .container {
+        background: #ffffff;
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
+      }
 
-    .chat-btn {
-      background-color: #f4c2c2;
-      color: #fff;
-      border: none;
-      padding: 0.5rem 1rem;
-      border-radius: 20px;
-      font-weight: 600;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
+      .dark .container {
+        background: #1e293b;
+        box-shadow: 0 10px 30px rgba(255, 255, 255, 0.05);
+      }
 
-    .chat-btn:hover {
-      background-color: #cc3366;
-    }
+      h1 {
+        font-family: "Pacifico", cursive;
+        font-size: 2rem;
+        text-align: center;
+        margin-bottom: 1.5rem;
+      }
 
-    @media (max-width: 600px) {
-      .inbox-container {
-        padding: 2rem 1.2rem;
+      .light h1 {
+        color: #4f46e5;
+      }
+
+      .dark h1 {
+        color: #a5b4fc;
+      }
+
+      .search-bar input {
+        width: 100%;
+        padding: 0.7rem 1rem;
+        border-radius: 25px;
+        font-size: 1rem;
+        margin-bottom: 1.5rem;
+        border: 2px solid transparent;
+        transition: border-color 0.3s ease, box-shadow 0.3s ease;
+      }
+
+      .light .search-bar input {
+        background: #fff;
+        color: #000;
+        border: 2px solid #fff;
+      }
+
+      .dark .search-bar input {
+        background: #111827;
+        color: #f3f4f6;
+        border: 2px solid #374151;
+      }
+
+      .search-bar input:focus {
+        border-color: #4f46e5;
+        outline: none;
+        box-shadow: 0 0 8px rgba(99, 102, 241, 0.2);
       }
 
       .alumni {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1rem 0;
+        border-bottom: 1px solid #e5e7eb;
+        transition: all 0.3s ease;
+        opacity: 0;
+        animation: slideIn 0.4s ease forwards;
+      }
+
+      .dark .alumni {
+        border-bottom: 1px solid #374151;
+      }
+
+      @keyframes slideIn {
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+        from {
+          opacity: 0;
+          transform: translateY(10px);
+        }
+      }
+
+      .profile {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        flex: 1;
+      }
+
+      .avatar {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        font-weight: 600;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.1rem;
+        text-transform: uppercase;
+        border: 2px solid #c7d2fe;
+      }
+
+      .light .avatar {
+        background: #dbeafe;
+        color: #1e40af;
+      }
+
+      .dark .avatar {
+        background: #334155;
+        color: #93c5fd;
+        border: 2px solid #475569;
+      }
+
+      .profile-info {
+        display: flex;
         flex-direction: column;
-        align-items: flex-start;
-        gap: 0.6rem;
+      }
+
+      .alumni-name {
+        font-weight: 600;
+        font-size: 1rem;
+        display: flex;
+        align-items: center;
+        gap: 6px;
+      }
+
+      .user-type {
+        font-size: 0.75rem;
+        background: #e0e7ff;
+        color: #4f46e5;
+        padding: 2px 8px;
+        border-radius: 12px;
+        text-transform: capitalize;
+      }
+
+      .last-msg {
+        font-size: 0.85rem;
+        max-width: 220px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+
+      .light .last-msg {
+        color: #666;
+      }
+
+      .dark .last-msg {
+        color: #cbd5e1;
       }
 
       .chat-btn {
-        align-self: flex-end;
+        background-color: #4f46e5;
+        color: #fff;
+        border: none;
+        padding: 0.5rem 1rem;
+        border-radius: 20px;
+        font-weight: 600;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
       }
-    }
-  </style>
-</head>
-<body>
-  <div class="overlay">
-    <div class="inbox-container">
-      <h1>Let's Connect</h1>
-      <div class="search-bar">
-        <input type="text" id="searchInput" placeholder="Search alumni...">
-      </div>
-      <div id="chatInbox">
-        <!-- Sample alumni chat list -->
-        <div class="alumni">
-          <div class="profile">
-            <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="profile">
-            <div class="alumni-name">Urja Sharma</div>
-          </div>
-          <button class="chat-btn" onclick="startChat('Urja Sharma')">Chat</button>
-        </div>
 
-        <div class="alumni">
-          <div class="profile">
-            <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="profile">
-            <div class="alumni-name">Aanchal Taneja</div>
-          </div>
-          <button class="chat-btn" onclick="startChat('Aanchal Taneja')">Chat</button>
-        </div>
+      .chat-btn:hover {
+        background-color: #4338ca;
+      }
 
-        <div class="alumni">
-          <div class="profile">
-            <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="profile">
-            <div class="alumni-name">Jigisha Kohli</div>
-          </div>
-          <button class="chat-btn" onclick="startChat('Jigisha Kohli')">Chat</button>
-        </div>
+      .unread-dot {
+        width: 8px;
+        height: 8px;
+        background: #ef4444;
+        border-radius: 50%;
+        display: inline-block;
+        margin-left: 6px;
+      }
 
-        <div class="alumni">
-          <div class="profile">
-            <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="profile">
-            <div class="alumni-name">Kanika Vij</div>
-          </div>
-          <button class="chat-btn" onclick="startChat('Kanika Vij')">Chat</button>
-        </div>
+      .no-msg {
+        text-align: center;
+        margin-top: 2rem;
+        font-size: 1rem;
+      }
 
-        <div class="alumni">
-          <div class="profile">
-            <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="profile">
-            <div class="alumni-name">Trisha Sachdeva</div>
-          </div>
-          <button class="chat-btn" onclick="startChat('Trisha Sachdeva')">Chat</button>
-        </div>
+      .light .no-msg {
+        color: #777;
+      }
 
-        <div class="alumni">
-          <div class="profile">
-            <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="profile">
-            <div class="alumni-name">Priya Arora</div>
-          </div>
-          <button class="chat-btn" onclick="startChat('Priya Arora')">Chat</button>
-        </div>
+      .dark .no-msg {
+        color: #9ca3af;
+      }
 
-        <div class="alumni">
-          <div class="profile">
-            <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="profile">
-            <div class="alumni-name">Afreen Khan</div>
-          </div>
-          <button class="chat-btn" onclick="startChat('Afreen Khan')">Chat</button>
-        </div>
+      @media (max-width: 600px) {
+        .alumni {
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 0.6rem;
+        }
+        .chat-btn {
+          align-self: flex-end;
+        }
+      }
 
-        <div class="alumni">
-          <div class="profile">
-            <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="profile">
-            <div class="alumni-name">Sweta Sharma</div>
-          </div>
-          <button class="chat-btn" onclick="startChat('Sweta Sharma')">Chat</button>
-        </div>
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+    </style>
+  </head>
 
-        <!-- Add more alumni as needed -->
+  <body>
+    <div id="particles-container"></div>
+
+    <div class="page-wrapper">
+      <a href="dashboard.html" class="home-link">← Home</a>
+      <div class="container">
+        <h1>Let's Connect</h1>
+        <div class="search-bar">
+          <input type="text" id="searchInput" placeholder="Search alumni..." />
+        </div>
+        <div id="chatInbox"></div>
       </div>
     </div>
-  </div>
 
-  <script>
-    
-    function startChat(fullName) {
-      const encodedName = encodeURIComponent(fullName);
-      window.location.href = `dm.html?name=${encodedName}`;
-    }
-  
+    <script src="./firebase-config.js"></script>
+    <script>
+      const auth = firebase.auth();
+      const db = firebase.firestore();
 
-    const searchInput = document.getElementById("searchInput");
-    searchInput.addEventListener("input", function () {
-      const filter = searchInput.value.toLowerCase();
-      const alumniList = document.querySelectorAll(".alumni");
+      const chatInbox = document.getElementById("chatInbox");
+      const searchInput = document.getElementById("searchInput");
 
-      alumniList.forEach(alum => {
-        const name = alum.querySelector(".alumni-name").textContent.toLowerCase();
-        alum.style.display = name.includes(filter) ? "flex" : "none";
+      function getInitials(name) {
+        return name.split(" ").map(w => w[0]).join("").toUpperCase().slice(0, 2);
+      }
+
+      function formatTime(date) {
+        if (!date) return "";
+        const diff = (new Date() - date) / 1000;
+        if (diff < 60) return "Just now";
+        if (diff < 3600) return Math.floor(diff / 60) + " min ago";
+        if (diff < 86400) return Math.floor(diff / 3600) + " hr ago";
+        if (diff < 604800) return Math.floor(diff / 86400) + " day ago";
+        return date.toLocaleDateString();
+      }
+
+      function renderAlumni(id, name, userType, lastMessage, timestamp, unread) {
+        const formattedTime = timestamp ? formatTime(new Date(timestamp.seconds * 1000)) : "";
+        const html = `
+          <div class="alumni">
+            <div class="profile">
+              <div class="avatar">${getInitials(name)}</div>
+              <div class="profile-info">
+                <div style="display: flex; align-items: center; gap: 6px;">
+                  <span class="alumni-name">${name}</span>
+                  <span class="user-type">${userType}</span>
+                  ${unread ? '<span class="unread-dot"></span>' : ""}
+                </div>
+                <div class="last-msg">
+                  ${lastMessage || "No messages yet."}
+                  ${formattedTime ? ` • ${formattedTime}` : ""}
+                </div>
+              </div>
+            </div>
+            <button class="chat-btn" onclick="startChat('${id}', '${name}')">Chat</button>
+          </div>`;
+        chatInbox.insertAdjacentHTML("beforeend", html);
+      }
+
+      function startChat(uid, name) {
+        window.location.href = `dm.html?uid=${encodeURIComponent(uid)}&name=${encodeURIComponent(name)}`;
+      }
+
+      auth.onAuthStateChanged(user => {
+        if (!user) return (window.location.href = "login.html");
+        const currentUid = user.uid;
+
+        db.collection("messages")
+          .where("participants", "array-contains", currentUid)
+          .orderBy("timestamp", "desc")
+          .onSnapshot(async snapshot => {
+            chatInbox.innerHTML = "";
+
+            if (snapshot.empty) {
+              chatInbox.innerHTML = `
+              <div class="no-msg">
+                You haven’t connected with anyone yet.<br>
+                <a href="alumni.html" style="color:#4f46e5; text-decoration:underline;">Find people to connect →</a>
+              </div>`;
+              return;
+            }
+
+            for (const doc of snapshot.docs) {
+              const data = doc.data();
+              const otherUid = data.participants.find(id => id !== currentUid);
+              const userDoc = await db.collection("users").doc(otherUid).get();
+              if (!userDoc.exists) continue;
+
+              const { name, userType } = userDoc.data();
+              const lastMessage = data.lastMessage || "";
+              const timestamp = data.timestamp || null;
+              const unread = data.lastSender === otherUid && !(data.readBy || []).includes(currentUid);
+
+              renderAlumni(otherUid, name || "Unnamed", userType || "user", lastMessage, timestamp, unread);
+            }
+          });
       });
-    });
-  </script>
-</body>
+
+      searchInput.addEventListener("input", () => {
+        const q = searchInput.value.toLowerCase();
+        document.querySelectorAll(".alumni").forEach(el => {
+          const name = el.querySelector(".alumni-name").textContent.toLowerCase();
+          el.style.display = name.includes(q) ? "flex" : "none";
+        });
+      });
+
+      document.addEventListener("DOMContentLoaded", () => {
+        const theme = localStorage.getItem("theme") || "light";
+        document.body.classList.add(theme);
+        loadConnectedParticles(theme);
+      });
+
+      function loadConnectedParticles(theme) {
+        tsParticles.load("particles-container", {
+          fullScreen: { enable: false },
+          background: {
+            color: { value: theme === "dark" ? "#111827" : "#f0f4ff" },
+          },
+          particles: {
+            number: { value: 70, density: { enable: true, area: 800 } },
+            color: { value: theme === "dark" ? "#a5b4fc" : "#4f46e5" },
+            shape: { type: "circle" },
+            opacity: { value: 0.5 },
+            size: { value: { min: 1, max: 3 } },
+            links: {
+              enable: true,
+              distance: 150,
+              color: theme === "dark" ? "#a5b4fc" : "#4f46e5",
+              opacity: 0.4,
+              width: 1,
+            },
+            move: {
+              enable: true,
+              speed: 1,
+              direction: "none",
+              outModes: { default: "bounce" },
+            },
+          },
+          interactivity: {
+            events: {
+              onHover: { enable: true, mode: "grab" },
+              resize: true,
+            },
+            modes: {
+              grab: { distance: 140, links: { opacity: 0.7 } },
+            },
+          },
+          detectRetina: true,
+        });
+      }
+    </script>
+  </body>
 </html>
