--- a/dm.html
+++ b/dm.html
@@ -1,223 +1,403 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <title>Direct Message | SheCircle</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: url('alum/alum.jpeg') no-repeat center center fixed;
-      background-size: cover;
-      height: 100vh;
-      color: #333;
-      position: relative;
-    }
-
-    body::before {
-      content: '';
-      position: absolute;
-      inset: 0;
-      background: rgba(255, 255, 255, 0.6);
-      backdrop-filter: blur(12px);
-      z-index: 0;
-    }
-
-    .chat-container {
-      position: relative;
-      z-index: 1;
-      max-width: 800px;
-      height: 90vh;
-      margin: 2rem auto;
-      display: flex;
-      flex-direction: column;
-      background: rgba(255, 255, 255, 0.5);
-      backdrop-filter: blur(18px);
-      border-radius: 20px;
-      border: 1px solid rgba(255, 255, 255, 0.3);
-      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
-      overflow: hidden;
-    }
-
-    .chat-header {
-      padding: 1rem 2rem;
-      display: flex;
-      align-items: center;
-      gap: 15px;
-      background: rgba(255, 255, 255, 0.35);
-      border-bottom: 1px solid rgba(255, 255, 255, 0.4);
-    }
-
-    .chat-header img {
-      width: 42px;
-      height: 42px;
-      border-radius: 50%;
-      background: #fff;
-    }
-
-    .chat-header span {
-      font-size: 1.2rem;
-      font-weight: 600;
-      color: #333;
-    }
-
-    .chat-box {
-      flex: 1;
-      padding: 1.2rem;
-      overflow-y: auto;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-
-    .chat-box::-webkit-scrollbar {
-      width: 6px;
-    }
-
-    .chat-box::-webkit-scrollbar-thumb {
-      background: rgba(150, 150, 150, 0.4);
-      border-radius: 4px;
-    }
-
-    .message {
-      max-width: 70%;
-      padding: 0.7rem 1rem;
-      border-radius: 16px;
-      font-size: 0.95rem;
-      line-height: 1.4;
-      animation: fadeInUp 0.3s ease;
-      word-wrap: break-word;
-    }
-
-    .sent {
-      align-self: flex-end;
-      background: rgba(255, 240, 245, 0.7);
-      /* subtle blush */
-    }
-
-    .received {
-      align-self: flex-start;
-      background: rgba(240, 240, 240, 0.8);
-      color: #444;
-    }
-
-    @keyframes fadeInUp {
-      from {
-        opacity: 0;
-        transform: translateY(10px);
+<html lang="en" class="transition duration-500">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Direct Message | SheCircle</title>
+    <style>
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        background-color: transparent;
       }
 
-      to {
-        opacity: 1;
-        transform: translateY(0);
+      html.dark {
+        background-color: #0f0f0f !important;
       }
-    }
 
-    .chat-input {
-      display: flex;
-      padding: 1rem;
-      background: rgba(255, 255, 255, 0.35);
-      border-top: 1px solid rgba(255, 255, 255, 0.4);
-    }
+      :root {
+        --bg-overlay: rgba(255, 255, 255, 0.6);
+        --glass-bg: rgba(255, 255, 255, 0.4);
+        --glass-border: rgba(255, 255, 255, 0.3);
+        --blur: blur(18px);
+        --header-bg: rgba(255, 255, 255, 0.25);
+        --sent-bg: #e0e7ff;
+        --recv-bg: #f5f5f5;
+        --text-primary: #222;
+        --timestamp: #777;
+        --input-bg: rgba(255, 255, 255, 0.8);
+        --placeholder: #999;
+        --input-focus-bg: #fff;
+        --send-bg: #6366f1;
+        --send-hover-bg: #4f46e5;
+      }
 
-    .chat-input input {
-      flex: 1;
-      padding: 0.75rem 1rem;
-      border: none;
-      border-radius: 24px;
-      background: rgba(255, 255, 255, 0.7);
-      color: #333;
-      outline: none;
-      font-size: 1rem;
-    }
+      html.dark {
+        --bg-overlay: rgba(30, 30, 30, 0.65);
+        --glass-bg: rgba(40, 40, 40, 0.4);
+        --glass-border: rgba(255, 255, 255, 0.1);
+        --blur: blur(14px);
+        --header-bg: rgba(50, 50, 50, 0.5);
+        --sent-bg: #3f3f46;
+        --recv-bg: #2f2f2f;
+        --text-primary: #f4f4f5;
+        --timestamp: #aaa;
+        --input-bg: rgba(255, 255, 255, 0.05);
+        --placeholder: #ccc;
+        --input-focus-bg: #1e1e1e;
+        --send-bg: #818cf8;
+        --send-hover-bg: #6366f1;
+      }
 
-    .chat-input input::placeholder {
-      color: #777;
-    }
+      * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
 
-    .chat-input button {
-      padding: 0 1.2rem;
-      margin-left: 10px;
-      border: none;
-      border-radius: 24px;
-      background: #dcdcdc;
-      color: #444;
-      cursor: pointer;
-      transition: background 0.2s ease;
-    }
+      body {
+        font-family: "Poppins", sans-serif;
+        background: url("alum/alum.jpeg") no-repeat center center fixed;
+        background-size: cover;
+        height: 100vh;
+        color: var(--text-primary);
+        position: relative;
+      }
 
-    .chat-input button:hover {
-      background: #c8c8c8;
-    }
-  </style>
-</head>
+      body::before {
+        content: "";
+        position: absolute;
+        inset: 0;
+        background: var(--bg-overlay);
+        backdrop-filter: var(--blur);
+        z-index: 0;
+      }
 
-<body>
+      .chat-container {
+        position: relative;
+        z-index: 1;
+        max-width: 800px;
+        height: 90vh;
+        margin: 2rem auto;
+        display: flex;
+        flex-direction: column;
+        background: var(--glass-bg);
+        backdrop-filter: var(--blur);
+        border-radius: 20px;
+        border: 1px solid var(--glass-border);
+        box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
+        overflow: hidden;
+      }
 
-  <div class="chat-container">
-    <div class="chat-header">
-      <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="profile" />
-      <span id="chatName">Connecting...</span>
+      .chat-header {
+        padding: 1rem 2rem;
+        display: flex;
+        align-items: center;
+        gap: 15px;
+        background: var(--header-bg);
+        border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+      }
+
+      .chat-header img {
+        width: 42px;
+        height: 42px;
+        border-radius: 50%;
+        background: #fff;
+      }
+
+      .chat-header span {
+        font-size: 1.2rem;
+        font-weight: 600;
+        color: var(--text-primary);
+      }
+
+      .chat-box {
+        flex: 1;
+        padding: 1.2rem;
+        overflow-y: auto;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        scroll-behavior: smooth;
+      }
+
+      .chat-box::-webkit-scrollbar {
+        width: 6px;
+      }
+
+      .chat-box::-webkit-scrollbar-thumb {
+        background: rgba(118, 118, 255, 0.3);
+        border-radius: 10px;
+      }
+
+      .message {
+        max-width: 70%;
+        padding: 0.8rem 1rem;
+        border-radius: 16px;
+        font-size: 0.96rem;
+        line-height: 1.4;
+        animation: slideIn 0.25s ease;
+        word-wrap: break-word;
+        box-shadow: 0 1px 5px rgba(0, 0, 0, 0.05);
+        transition: all 0.2s ease-in-out;
+      }
+
+      .sent {
+        align-self: flex-end;
+        background: var(--sent-bg);
+        color: var(--text-primary);
+      }
+
+      .received {
+        align-self: flex-start;
+        background: var(--recv-bg);
+        color: var(--text-primary);
+      }
+
+      .timestamp {
+        font-size: 0.7rem;
+        color: var(--timestamp);
+        margin-top: 4px;
+        text-align: right;
+      }
+
+      @keyframes slideIn {
+        from {
+          opacity: 0;
+          transform: translateY(10px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      .chat-input {
+        display: flex;
+        padding: 1rem;
+        background: var(--header-bg);
+        border-top: 1px solid rgba(0, 0, 0, 0.05);
+      }
+
+      .chat-input input {
+        flex: 1;
+        padding: 0.75rem 1.2rem;
+        border: none;
+        border-radius: 24px;
+        background: var(--input-bg);
+        color: var(--text-primary);
+        outline: none;
+        font-size: 1rem;
+        transition: all 0.2s ease;
+      }
+
+      .chat-input input::placeholder {
+        color: var(--placeholder);
+      }
+
+      .chat-input input:focus {
+        box-shadow: 0 0 0 2px var(--send-hover-bg);
+        background: var(--input-focus-bg);
+      }
+
+      .chat-input button {
+        padding: 0 1.3rem;
+        margin-left: 10px;
+        border: none;
+        border-radius: 24px;
+        background: var(--send-bg);
+        color: #fff;
+        font-weight: 500;
+        cursor: pointer;
+        transition: background 0.25s ease;
+      }
+
+      .chat-input button:hover {
+        background: var(--send-hover-bg);
+      }
+    </style>
+
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore-compat.js"></script>
+    <script src="./firebase-config.js"></script>
+    <script>
+
+      // THEME LOGIC
+      window.addEventListener("DOMContentLoaded", () => {
+        const theme = localStorage.getItem("theme") || "light";
+        if (theme === "dark") {
+          document.documentElement.classList.add("dark");
+        } else {
+          document.documentElement.classList.remove("dark");
+        }
+      });
+    </script>
+  </head>
+
+  <body>
+    <div class="chat-container">
+      <div class="chat-header">
+        <img
+          src="https://cdn-icons-png.flaticon.com/512/149/149071.png"
+          alt="profile"
+        />
+        <span id="chatName">Connecting...</span>
+      </div>
+      <div class="chat-box" id="chatBox"></div>
+      <div class="chat-input">
+        <input type="text" id="msgInput" placeholder="Type your message..." />
+        <button onclick="sendMessage()">Send</button>
+      </div>
     </div>
 
-    <div class="chat-box" id="chatBox">
-      <div class="message sent">Hi di! I hope you're doing well. I wanted to ask you something about my upcoming
-        internship drive, if you don’t mind?</div>
-      <div class="message received">Hey! I’m so glad you reached out. Of course I don’t mind. Tell me, what’s going on?
-        How can I help?</div>
+    <script>
+      const auth = firebase.auth();
+      const db = firebase.firestore();
 
-    </div>
+      const chatBox = document.getElementById("chatBox");
+      const chatNameSpan = document.getElementById("chatName");
+      const msgInput = document.getElementById("msgInput");
 
-    <div class="chat-input">
-      <input type="text" id="msgInput" placeholder="Type your message..." />
-      <button onclick="sendMessage()">Send</button>
-    </div>
-  </div>
+      const urlParams = new URLSearchParams(window.location.search);
+      const targetUserId = urlParams.get("uid");
 
-  <script>
-    const urlParams = new URLSearchParams(window.location.search);
-    const name = urlParams.get('name') || 'Alumni';
-    document.getElementById("chatName").innerText = name;
+      let chatId = "",
+        currentUserId = "";
 
-    function sendMessage() {
-      const input = document.getElementById("msgInput");
-      const text = input.value.trim();
-      if (text !== "") {
-        const chatBox = document.getElementById("chatBox");
+      auth.onAuthStateChanged(async (user) => {
+        if (!user) {
+          alert("Please login first.");
+          msgInput.disabled = true;
+          return;
+        }
 
-        const newMsg = document.createElement("div");
-        newMsg.className = "message sent";
-        newMsg.textContent = text;
-        chatBox.appendChild(newMsg);
+        currentUserId = user.uid;
+        if (!targetUserId || currentUserId === targetUserId) {
+          alert("Invalid or self chat not allowed.");
+          msgInput.disabled = true;
+          return;
+        }
 
-        input.value = "";
-        chatBox.scrollTop = chatBox.scrollHeight;
+        chatId = [currentUserId, targetUserId].sort().join("_");
 
-        // Optional: simulate reply from the other person
-        setTimeout(() => {
-          const reply = document.createElement("div");
-          reply.className = "message received";
-          reply.textContent = "Thanks for your message! I'll get back to you soon.";
-          chatBox.appendChild(reply);
-          chatBox.scrollTop = chatBox.scrollHeight;
-        }, 1200);
+        await db
+          .collection("messages")
+          .doc(chatId)
+          .set(
+            { participants: [currentUserId, targetUserId] },
+            { merge: true }
+          );
+
+        const userDoc = await db.collection("users").doc(targetUserId).get();
+        chatNameSpan.textContent = userDoc.exists
+          ? userDoc.data().name || "Alumni"
+          : "Unknown User";
+
+        db.collection("messages")
+          .doc(chatId)
+          .collection("chats")
+          .orderBy("timestamp")
+          .onSnapshot((snapshot) => {
+            snapshot.docChanges().forEach(async (change) => {
+              if (change.type === "added") {
+                const data = change.doc.data();
+                const div = document.createElement("div");
+                div.className =
+                  "message " +
+                  (data.senderId === currentUserId ? "sent" : "received");
+                div.innerHTML = `${
+                  data.text
+                }<div class="timestamp">${formatTime(
+                  data.timestamp?.toDate()
+                )}</div>`;
+
+                // read receipts
+                if (
+                  data.senderId !== currentUserId &&
+                  (!data.readBy || !data.readBy.includes(currentUserId))
+                ) {
+                  await db
+                    .collection("messages")
+                    .doc(chatId)
+                    .collection("chats")
+                    .doc(change.doc.id)
+                    .update({
+                      readBy:
+                        firebase.firestore.FieldValue.arrayUnion(currentUserId),
+                    });
+
+                  await db
+                    .collection("messages")
+                    .doc(chatId)
+                    .update({
+                      readBy:
+                        firebase.firestore.FieldValue.arrayUnion(currentUserId),
+                    });
+                }
+
+                chatBox.appendChild(div);
+                chatBox.scrollTop = chatBox.scrollHeight;
+              }
+            });
+          });
+
+        msgInput.focus();
+      });
+
+      function sendMessage() {
+        const text = msgInput.value.trim();
+        if (
+          !text ||
+          !chatId ||
+          !currentUserId ||
+          currentUserId === targetUserId
+        )
+          return;
+
+        const now = firebase.firestore.FieldValue.serverTimestamp();
+
+        db.collection("messages")
+          .doc(chatId)
+          .collection("chats")
+          .add({
+            text,
+            senderId: currentUserId,
+            timestamp: now,
+            readBy: [currentUserId],
+          });
+
+        db.collection("messages")
+          .doc(chatId)
+          .set(
+            {
+              participants: [currentUserId, targetUserId],
+              lastMessage: text,
+              lastSender: currentUserId,
+              timestamp: now,
+              readBy: [currentUserId],
+            },
+            { merge: true }
+          );
+
+        msgInput.value = "";
       }
-    }
 
-    // Optional: Allow pressing Enter to send
-    document.getElementById("msgInput").addEventListener("keydown", function (e) {
-      if (e.key === "Enter") {
-        sendMessage();
+      msgInput.addEventListener("keydown", (e) => {
+        if (e.key === "Enter") sendMessage();
+      });
+
+      function formatTime(date) {
+        if (!date) return "";
+        const diff = (new Date() - date) / 1000;
+        if (diff < 60) return "just now";
+        if (diff < 3600) return Math.floor(diff / 60) + " min ago";
+        if (diff < 86400) return Math.floor(diff / 3600) + " hr ago";
+        if (diff < 604800) return Math.floor(diff / 86400) + " day ago";
+        return date.toLocaleDateString();
       }
-    });
-  </script>
-
-</body>
-
+    </script>
+  </body>
 </html>
